self_repl: start bit on esr bijection after thm 3.

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -727,6 +727,20 @@ indeed exactly self-replicating.
 
 \hfill\(\Box\)
 
+TODO add Cantor dust mention
+
+Call the function \(h\) \emph{tail-consistent} on a domain set \(A\) if
+\(\tail(x) = \tail(y) \;\Rightarrow\; h(x) = h(y)\) for any
+\(x,y \in A.\) There's a bijection between the exactly self-replicating
+functions characterized by theorem 3 and an arbitrary choice of the
+following three functions:
+
+\[\begin{array}{ll}
+r_L : [0,1] \to \R, \\
+r_R : [0,1] \to \R, & \text{and} \\
+h   : (1,2) - G \to \R & \text{which is tail-consistent.}
+\end{array}\]
+
 \begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
 
 We can see this by working with three functions: \(r_L : [0,1] \to \R\),
