self_repl: add mention of the Cantor set.

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -592,6 +592,14 @@ Using this disjointedness, we can find the total measure of their union
 Since each \(G_k\subset [1,2]\), this justifies the claim that theorem 1
 characterizes \(f\) almost everywhere in that interval.
 
+\newcommand{\cantor}{\mathcal{C}}
+
+Readers familiar with the
+\href{https://en.wikipedia.org/wiki/Cantor_set}{\emph{Cantor set}}
+\(\cantor\) may notice that it's closely related to the set \(G\). In
+fact, \(\cantor\) is exactly the closure of \((1,2)-G\) shifted by a
+unit to reside within \([0,1].\)
+
 What values may \(f\) take on for the points \(x\in (1,2) - G\)? The
 choice is still not arbitrary as the values remain related. I'll explore
 this question next.
@@ -726,8 +734,6 @@ In all cases, equation (\ref{eq:thm3_pf}) holds, ensuring that \(f\) is
 indeed exactly self-replicating.
 
 \hfill\(\Box\)
-
-TODO add Cantor dust mention
 
 Call the function \(h\) \emph{tail-consistent} on a domain set \(A\) if
 \(\tail(x) = \tail(y) \;\Rightarrow\; h(x) = h(y)\) for any
