self_repl: Start official kindle support.

--- a/self_repl_fns/self_repl_fns_for_kindle.tex
+++ b/self_repl_fns/self_repl_fns_for_kindle.tex
@@ -108,7 +108,7 @@ particular, it depends on the ambiguous notion of ``strong resemblance''
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{images/added_normals4.png}
+\includegraphics{images/pdfs/added_normals4.pdf}
 \caption{\label{fig:added_normals}As an example of a self-replicating
 function, the normal curve can be expressed as the sum of two
 normal-like curves that are reflections of each
@@ -144,7 +144,7 @@ the leaf points is only slightly changed.
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{images/ellsystem2.png}
+\includegraphics{images/pdfs/ellsystem2.pdf}
 \caption{\label{fig:ellsystem}Left: An \emph{L}-system; Right: the same
 system with two large subtrees removed. In both cases, a histogram of
 leaf point density is provided around an outer
@@ -162,7 +162,7 @@ figure~\ref{fig:well_dist}.
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{images/well_distributed_ell_like_system.png}
+\includegraphics{images/pdfs/well_distributed_ell_like_system.pdf}
 \caption{\label{fig:well_dist}A \emph{L}-like system in which line
 directions are chosen to maximize the regularity of leaf point
 distribution.}\label{fig:wellux5fdist}
@@ -239,7 +239,7 @@ indicator functions can be considered simple self-replicating functions:
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{images/added_intervals6.png}
+\includegraphics{images/pdfs/added_intervals6.pdf}
 \caption{\label{fig:added_intervals}Visual representation of the
 addition of indicator functions of
 intervals.}\label{fig:addedux5fintervals}
@@ -268,7 +268,7 @@ figure~\ref{fig:ramp_fns}.
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{images/ramp_fns3.png}
+\includegraphics{images/pdfs/ramp_fns3.pdf}
 \caption{\label{fig:ramp_fns}Visual addition of two ramp functions to
 form another.}\label{fig:rampux5ffns}
 \end{figure}
@@ -328,7 +328,7 @@ could be replaced by curves with the shapes of \(x^2\) and \(1-x^2\) on
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{images/nonlinear_ramps2.png}
+\includegraphics{images/pdfs/nonlinear_ramps2.pdf}
 \caption{\label{fig:nonlinear_ramps}An example of nonlinear ramp
 functions using \(x^2\) on \(x\in [0, 1]\) to determine the edge
 shapes.}\label{fig:nonlinearux5framps}
@@ -364,7 +364,7 @@ example \(K-\)functions in figure~\ref{fig:other_ramps} are not.
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{images/other_ramps2.png}
+\includegraphics{images/pdfs/other_ramps2.pdf}
 \caption{\label{fig:other_ramps}Example \(K-\)functions: on the top is a
 function more discontinuous than the indicator function of an interval;
 on the bottom is a continuous but non-peak-monotonic
@@ -470,7 +470,7 @@ Conceptually, \(r_L\) and \(r_R\) are the left and right ramp functions.
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{images/nonpl_setup.png}
+\includegraphics{images/pdfs/nonpl_setup.pdf}
 \caption{\label{fig:nonpl_setup}An example showing how \(r_L\), \(r_R\),
 and \(g\) are extracted from a function \(f\), shown on
 top.}\label{fig:nonplux5fsetup}
@@ -565,7 +565,7 @@ Figure~\ref{fig:nonpl_process} illustrates \(G_k\) for low values of
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{images/nonpl_process.png}
+\includegraphics{images/pdfs/nonpl_process.pdf}
 \caption{\label{fig:nonpl_process}The inductive process in the proof of
 theorem 1. The top line is the domain \([0,5]\) of \(\,f_S\); the line
 below that is the domain \([0,3]\) of \(\,f;\) then the subsets of
@@ -763,7 +763,7 @@ function has the constant value \(r_L(0) + r_R(0)\).
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{images/nonplateau.png}
+\includegraphics{images/pdfs/nonplateau.pdf}
 \caption{\label{fig:nonplateau}An exactly self-replicating function
 \(f\) completely determined by \(r_L(x) = \cos(2x)/2 + 1/4\),
 \(r_R(x) = r_L(1 - x)\), and the value \(f(x) = r_L(0) + r_R(0)\) for
@@ -846,7 +846,7 @@ The normal curve is described by \(y = e^{-x^2/2}\).
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{images/normal3.png}
+\includegraphics{images/pdfs/normal3.pdf}
 \caption{The normal curve: \(y=e^{-x^2/2}\).}
 \end{figure}
 
