self_repl: partial work toward kindle pdf.

--- a/self_repl_fns/self_repl_fns_for_kindle.tex
+++ b/self_repl_fns/self_repl_fns_for_kindle.tex
@@ -500,7 +500,7 @@ zero.
 
 \newcommand{\zerotwo}{\big\{\!\raise1.5pt\hbox{$\genfrac{}{}{0pt}{}
 {\lower1.8pt\hbox{$\smash{\scriptstyle 0}$}}
-{\lower1pt\hbox{$\smash{\scriptstyle 2}$}}$}\!\big\}}
+{\lower1pt\hbox{$\smash{\scriptstyle 2}$}}$}\big\}}
 
 \newcommand{\lstar}{\overline{*}_3}
 
