self_repl: Clean up shoddy work from last commit.

--- a/self_repl_fns/self_repl_fns_for_kindle.tex
+++ b/self_repl_fns/self_repl_fns_for_kindle.tex
@@ -498,7 +498,7 @@ non-ramp values of \(f\) almost everywhere; a boolean property
 everywhere}} when the set \(\{x : P(x) = \text{false}\}\) has measure
 zero.
 
-\newcommand{\zerotwo}{\big\{\!\raise1.5pt\hbox{$\genfrac{}{}{0pt}{}
+\newcommand{\zerotwo}{\big\{\raise1.5pt\hbox{$\genfrac{}{}{0pt}{}
 {\lower1.8pt\hbox{$\smash{\scriptstyle 0}$}}
 {\lower1pt\hbox{$\smash{\scriptstyle 2}$}}$}\big\}}
 
