cs229: Work on trace properties.

--- a/ml_notes/cs229/cs229.md
+++ b/ml_notes/cs229/cs229.md
@@ -72,7 +72,7 @@ for such $x$ values.
 This is not yet a solidified intuition.
 I'd be interested in revisiting this question if I have time.
 
-## Persistence of trace
+## Properties of the trace operator
 
 The trace of a square matrix obeys the nice property that
 
@@ -90,11 +90,9 @@ $$a_{ij}b_{ji} \;\text{means}\; \sum_{i,j} a_{ij}b_{ji}.$$
 
 I wonder if there's a more elegant way to verify ([@eq:persistent_trace]).
 
-This notation will become more useful in a moment.
-
 Ng gives other interesting trace-based equations, examined next.
 
-$$\text{Goal:}\quad \nabla_A\tr AB = B^T.$$
+* Goal: $\quad \nabla_A\tr AB = B^T.$
 
 Since
 
@@ -106,6 +104,36 @@ $$(\nabla_A\tr AB)_{ij} = b_{ji},$$
 
 verifying the goal.
 
-$$\text{Goal:}\quad \nabla_{A^T}f(A) = (\nabla_A f(A))^T.$$
+* Goal: $\quad \nabla_{A^T}f(A) = (\nabla_A f(A))^T.$
 
-TODO continue from here
+This can be viewed as
+
+$$(\nabla_{A^T}f(A))_{ij} = \frac{\partial f}{\partial a_{ji}}
+                          = (\nabla_A f(A))_{ji}.$$
+
+* Goal: $\quad \nabla_A\text{tr}(ABA^TC) = CAB + C^TAB^T.$
+
+I'll use some nonstandard index variable names below because I think
+it will help avoid possible confusion.
+Start with
+
+$$(ABA^TC)_{xy} = a_{xz} b_{zw} a_{vw} c_{vy}.$$
+
+Take the trace of that to arrive at
+
+$$\alpha = \text{tr}(ABA^TC) = a_{xz} b_{zw} a_{vw} c_{vx}.$$
+
+Use the product rule to find $\frac{\partial\alpha}{\partial a_{ij}}$.
+You can think of this as, in the equation above, first setting
+$xz = ij$ for one part of the product rule output, and then setting
+$vw = ij$ for the other part. The result is
+
+$$(\nabla_A\alpha)_{ij} = b_{jw} a_{vw} c_{vi} + a_{xz} b_{zj} c_{ix}
+                        = c_{vi} a_{vw} b_{jw} + c_{ix} a_{xz} b_{zj}.$$
+
+(The second equality above is based on the fact that we're free to
+ rearrange terms within products in the repeated-index notation being used.
+ Such rearrangement is commutativity of numbers, not of matrices.)
+
+This last expression is exactly the $ij^\text{th}$ entry of the matrix
+$CAB + C^TAB^T$, which was the goal.
