cs229: fix an error in a matrix deriv eqn.

--- a/ml_notes/cs229/cs229.tex
+++ b/ml_notes/cs229/cs229.tex
@@ -272,7 +272,7 @@ These all lead to \(\nt J(\theta) = X^TX\theta - X^Ty\) as before. I
 think it's clearer, though, once you grok the sense that
 
 \[\begin{array}{rcl}
-\nt \theta^TZ\theta & = & Z\theta + \theta^T Z, \text{and} \\
+\nt \theta^TZ\theta & = & Z\theta + (\theta^T Z)^T, \text{and} \\
 \nt u^T\theta & = & u, \\
 \end{array}\]
 
