cs229: notes on locally weighted linear regression

--- a/ml_notes/cs229/cs229.md
+++ b/ml_notes/cs229/cs229.md
@@ -232,3 +232,32 @@ To be perfectly clear, the motivation Ng provides only works when you have good
 reason to believe the error terms are indeed normal. At the same time,
 using a nice simple algorithm like least squares is quite practical even if you
 don't have a great model for your error terms.
+
+## Locally weighted linear regression (LWR)
+
+This idea is that, given a value $x$, we can choose $\theta$ to minimize
+the modified cost function
+
+$$\sum_i w^{(i)}(y^{(i)}-\theta^Tx^{(i)})^2,$$
+
+where
+
+$$w^{(i)} = \exp\left(-\frac{(x^{(i)}-x)^2}{2\tau^2}\right).$$
+
+I wonder: Why not just compute the value
+
+$$y = \frac{\sum_i w^{(i)}y^{(i)}}{\sum_i w^{(i)}}$$
+
+instead?
+
+I don't have a strong intuition for which approach would be better, although
+the linear interpolation is more work (unless I'm missing a clever way to
+implement LWR that wouldn't also work for the simpler equation immediately
+above).
+This also reminds me of
+[the $k-$nearest neighbors
+algorithm](https://en.wikipedia.org/wiki/K-nearest_neighbors_algorithm),
+though I've seen that presented as a classification approach while LWR
+is regression. Nonetheless, perhaps one could apply a locality-sensitive hash to
+quickly approximately find the $k$ nearest neighbors and then build a regression
+model using that.
