cs229: Add another note on logistic regression.

--- a/ml_notes/cs229/cs229.md
+++ b/ml_notes/cs229/cs229.md
@@ -328,5 +328,29 @@ The values of $b\toi$ will be small for large $|\th^Tx|$ because
 $\tau(\th^Tx)$ necessarily flattens out for large input values (since it's
 monotonic and bounded in $[0,1]$).
 
+Ng states that the assumption of a Bernoulli distribution for $p(y|x;\th)$
+results in the traditional gradient update rule for logistic regression, but
+there is another choice available in the argument.
+The definition of a Bernoulli distribution means that we must have
 
+$$p(y|x;\th) = \begin{cases}
+h_\th(x) & \text{if } y = 1, \text{ and} \\
+1 - h_\th(x) & \text{otherwise}.
+\end{cases}$$
 
+There are a number of expressions that also capture this same behavior for the
+two values $y=0$ and $y=1.$
+The one used in the
+course is
+
+$$p(y|x;\th) = h^y(1-h)^{1-y},$$
+
+which is convenient since we're working with the product
+$p(y) = \prod_i p(y\toi).$
+However, we could have also worked with
+
+$$p(y|x;\th) = yh + (1-y)(1-h),$$
+
+which also gives exactly the needed values for the cases $y=1$ and $y=0.$
+Although the traditional expression is easier to work with, it seems worth
+nothing that there is a choice to be made.
