--- a/ml_notes/cs229/cs229.md
+++ b/ml_notes/cs229/cs229.md
@@ -354,3 +354,52 @@ $$p(y|x;\th) = yh + (1-y)(1-h),$$
 which also gives exactly the needed values for the cases $y=1$ and $y=0.$
 Although the traditional expression is easier to work with, it seems worth
 nothing that there is a choice to be made.
+
+## Using Newton's method for logistic regression
+
+Ng provides the alternative logistic regression update formula
+
+$$\th := \th - H^{-1}\nabla_\th\ell(\th)$$ {#eq:vector_newton}
+
+without justifying it beyond explaining that it's the vector version of what one
+would do in a non-vector setting for finding an optima of $\ell'(\th),$ namely,
+
+$$\th := \th - \frac{\ell'(\th)}{\ell''(\th)}.$$
+
+The $H$ in the above equation is the *Hessian* of $\ell$, which I'll write
+as
+
+$$H = (h_{ij}) =
+\left(\frac{\partial^2\ell}{\partial\th_i\partial\th_j}\right).$$
+
+Here is one way to arrive at ([@eq:vector_newton]):
+
+$$\big[\nabla\ell(\th+\alpha)\big]_i
+  \approx \big[\nabla\ell(\th)\big]_i
+  + \sum_j\frac{\partial}{\partial\th_j}\big[\nabla\ell(\th)\big]_i
+  \cdot\alpha_j.$$ {#eq:lin_nab_ell}
+
+This is the linearized approximation of $\nabla\ell$ around $\th$; another
+perspective is to see this as the first-order Taylor polynomial of
+$\big[\nabla\ell\big]_i$ around $\th$.
+
+We can rewrite ([@eq:lin_nab_ell]) more concisely as
+
+$$\nabla\ell(\th + \alpha) \approx \nabla\ell(\th) + H\alpha.$$ {#eq:concise_lin_ell}
+
+Recall that our goal is to iterate on $\th$ toward
+a solution to $\nabla\ell(\th)=0$. Use ([@eq:concise_lin_ell]) toward this end
+by looking for $\alpha$ which solves $\nabla\ell(\th + \alpha) \approx 0.$
+If $H$ is invertible, then we have
+
+\newcommand{\lrarr}{\quad\Leftrightarrow\quad}
+
+$$\nabla\ell(\th) + H\alpha = 0
+\lrarr H\alpha = -\nabla\ell(\th)
+\lrarr \alpha = -H^{-1}\nabla\ell(\th).$$
+
+In other words, the desired iteration is
+
+$$\th := \th + \alpha = \th - H^{-1}\nabla\ell(\th),$$
+
+which confirms the goal, equation ([@eq:vector_newton]).
