--- a/ml_notes/cs229/cs229.tex
+++ b/ml_notes/cs229/cs229.tex
@@ -503,6 +503,33 @@ In other words, the desired iteration is
 
 which confirms the goal, equation (\ref{eq:vector_newton}).
 
+\subsection{The exponential family}\label{the-exponential-family}
+
+A class of distributions fits within the exponential family when there
+are functions \(a,\) \(b,\) and \(T\) such that
+
+\begin{equation}p(y;\eta) = b(y)\exp(\eta^TT(y)-a(\eta))\label{eq:exp_fam}\end{equation}
+
+expresses a distribution in the class.
+
+Ng uses this form to justify the particular use of
+\(g(z) = 1/(1+e^{-z})\) in logistic regression. I see how expressing a
+Bernoulli distribution in this form naturally result in the traditional
+form of logistic regression. However, as of the end of lecture 4, I
+don't think Ng has justified the power of the exponential family beyond
+explaining that it captures many popular distribution classes. (To be
+clear, I believe that this idea is very useful; I just am not convinced
+that \emph{why} it's useful has been explicitly explained yet.)
+
+I haven't fully grokked the exponential family yet, but I noticed that
+the main restriction in expression (\ref{eq:exp_fam}) seems to be that
+the only interaction between \(\eta\) and \(y\) is multiplicative in the
+sense that we could equally-well have written the density function as
+
+\[p(y;\eta) = b(y)c(\eta)\prod_i d_i(y_i)^{\eta_i},\]
+
+in the case that both \(\eta\) and \(y\) are vectors.
+
 \hypertarget{refs}{}
 
 \end{document}
