cs229: notes on generalized linear models.

--- a/ml_notes/cs229/cs229.md
+++ b/ml_notes/cs229/cs229.md
@@ -430,3 +430,51 @@ equally-well have written the density function as
 $$p(y;\eta) = b(y)c(\eta)\prod_i d_i(y_i)^{\eta_i},$$
 
 in the case that both $\eta$ and $y$ are vectors.
+
+## Generalized linear models
+
+Ng doesn't spell this out, but I think the following line of argument is why
+generalized linear models are considered useful.
+
+Suppose $\eta = \th^Tx$ and that we're working with a distribution parametrized
+by $\eta$ that can be expressed as
+
+$$p(y;\eta) = b(y)\exp\big(\eta^TT(y)-a(y)\big).$$
+
+Then the log likelihood function is given by
+
+$$\ell(\th) = \sum_i\log\big(p(y\toi;\eta\toi)\big)
+= \sum_i\log(b(y\toi)) + \eta^{(i)T}T(y\toi)-a(\eta\toi).$$
+
+We can express the gradient of this as
+
+$$\nabla\ell(\th) = \sum_i x\toi\big(T(y\toi)-a'(\eta\toi)\big),$$
+
+which corresponds to the gradient ascent update rule
+
+$$\th := \th + \alpha\big(T(y)-a'(\th^Tx)\big)x.$$ {#eq:glm_gradient_update}
+
+Let's see how this nice general update rule looks in a couple special cases.
+For simplicity, I'll stick to special cases where $\eta$ is a scalar value.
+
+### Gaussian GLM
+
+In this case, $a(\eta) = \eta^2/2$ so $a'(\eta) = \eta$; and $T(y)=y$.
+Then the update rule ([@eq:glm_gradient_update]) becomes
+
+$$\th := \th + \alpha(y-\th^Tx)x,$$
+
+which is just gradient ascient applied to least squares.
+
+### Logistic regression GLM
+
+In this case, $a(\eta) = \log(1 + e^\eta)$ and $T(y)=y$.
+So $a'(\eta) = 1/(1+e^{-\eta})$, and we can write the update
+rule ([@eq:glm_gradient_update]) as
+
+$$\th := \th + \alpha(y - g(\th^Tx))x,$$
+
+where $g$ is the logistic function.
+This matches the earlier update equation we saw for logistic regression,
+suggesting that our general approach isn't completely insane. It may even
+be technically correct.
