Why Gauss discr't analysis is like log'c regr'n.

--- a/ml_notes/cs229/cs229.md
+++ b/ml_notes/cs229/cs229.md
@@ -478,3 +478,73 @@ where $g$ is the logistic function.
 This matches the earlier update equation we saw for logistic regression,
 suggesting that our general approach isn't completely insane. It may even
 be technically correct.
+
+# On lecture notes 2
+
+The notes in this section are based on
+[lecture notes 2](http://cs229.stanford.edu/notes/cs229-notes2.pdf).
+
+## Why Gaussian discriminant analysis is like logistic regression
+
+Ng mentions this fact in the lecture and in the notes, but he doesn't go into
+the details of justifying it, so let's do that.
+
+The goal is to show that
+
+$$p(y=1\mid x) = \frac{1}{1+e^{-\th^T x}},$$ {#eq:gda_goal}
+
+where $\th$ is some function of the learned parameters
+$\phi,$ $\Sigma,$ $\mu_0,$ and $\mu_1;$ and we can consider $x$ as being
+augmented by a new coordinate $x_0=1$ to effectively allow the addition of a
+constant in the expression $\th^Tx.$
+In Gaussian discriminant analysis, we learn a model for
+$p(x\mid y)$ and for $p(y).$
+Specifically,
+
+$$\begin{array}{rcl}
+p(y) & = & \phi^y(1-\phi)^{1-y}, \\
+p(x\mid y=0) & = & N(\mu_0, \Sigma), \text{ and} \\
+p(x\mid y=1) & = & N(\mu_1, \Sigma), \\
+\end{array}$$
+
+where $N(\mu,\Sigma)$ indicates the multivariate normal distribution.
+From this we can derive
+
+$$p(y=1\mid x) = p(x\mid y=1)p(y=1)/p(x).$$ {#eq:gda_part1}
+
+For $j=0,1,$ let $A_j=p(x\mid y=j).$ Then we can write
+
+$$p(x) = p(x\mid y=0)p(y=0) + p(x\mid y=1)p(y=1) = A_0(1-\phi) + A_1\phi.$$
+
+Plug this expression for $p(x)$ back into ([@eq:gda_part1]) to get
+
+$$p(y=1\mid x) = \frac{\phi A_1}{(1-\phi)A_0 + \phi A_1}
+= \frac{1}{1 + \frac{A_0}{A_1}\left(\frac{1-\phi}{\phi}\right)}.$$ {#eq:gda_part2}
+
+At this point it will be useful to introduce the shorthand notation
+
+$$\langle x, y\rangle := x^T\Sigma^{-1}y,$$
+
+noting that this is linear in both terms just as the usual inner product is.
+It will also be convenient to define
+
+$$B_j = \langle x-\mu_j, x-\mu_j\rangle
+      = \langle x, x\rangle - 2\langle \mu_j,x\rangle + \langle \mu_j, \mu_j
+      \rangle.$$
+
+Our ultimate goal ([@eq:gda_goal]) can now be reduced to showing that
+the denominator of ([@eq:gda_part2]) is of the form
+$1 + \exp(a\langle b,x\rangle + c)$ for some constants $a,$ $b,$ and $c.$
+
+Notice that
+
+$$\frac{A_0}{A_1} = \frac{\exp(-1/2 B_0)}{\exp(-1/2 B_1)}
+   = \exp\left(\frac{1}{2}(B_1-B_0)\right)
+   = \exp\left(\frac{1}{2}\big(\langle 2\mu_0 - 2\mu_1, x\rangle+C\big)\right),$$
+
+where $C$ is based on the terms of $B_j$ that use $\mu_j$ but not $x.$
+The scalar factor of $A_0/A_1$ in ([@eq:gda_part2]) can also be absorbed into
+the constant $c$
+in the expression $\exp(a\langle b, x\rangle + c).$
+This confirms that the denominator of ([@eq:gda_part2]) is indeed
+of the needed form, confirming the goal ([@eq:gda_goal]).
