cs229: add hw md file; solve HW 1.1(a).

--- a/ml_notes/cs229/cs229.md
+++ b/ml_notes/cs229/cs229.md
@@ -18,6 +18,9 @@ These notes are available in two formats:
 
 I'll organize these notes to correspond with the written notes from the class.
 
+As I write these notes, I'm also putting together some
+[homework solutions](http://tylerneylon.com/notes/cs229/cs229hw.html).
+
 # On lecture notes 1
 
 The notes in this section are based on
