--- a/ml_notes/cs229/cs229.tex
+++ b/ml_notes/cs229/cs229.tex
@@ -97,6 +97,10 @@ available in two formats:
 I'll organize these notes to correspond with the written notes from the
 class.
 
+As I write these notes, I'm also putting together some
+\href{http://tylerneylon.com/notes/cs229/cs229hw.html}{homework
+solutions}.
+
 \section{On lecture notes 1}\label{on-lecture-notes-1}
 
 The notes in this section are based on
